Mobile: Fixes for Contact and Employers pages
Phone dials when you click contact number, removed white space at the
top of Employers page, added "...and more!" after logos

--- a/css/style.css
+++ b/css/style.css
@@ -621,11 +621,11 @@ h2, h4{
 #contactInfo [class*="fa"] {
 	margin-top: 30px;
 }
-#contactInfo p {
+#contactInfo a {
 	margin-bottom: 30px;
 }
 
-#contactInfo p .bottom{
+#contactInfo a .bottom{
 	margin-top: 30px;
 }
 #contactInfo {
@@ -1541,12 +1541,36 @@ div#tour-container { display: none; }
 	margin-bottom: 50px;
 }
 
+
+
 .logo {
 	height: 200px;
 	width: 200px;
 	margin-left: 15px;
 	margin-right: 15px;
 	
+}
+
+#andMore{
+	display: none; /* Delete this to get "...and more!" on desktop version */
+}
+
+@media only screen and (max-width: 479px){
+	.emp-logo-row{
+		margin-top: 0;
+	}
+	#logo-row-text{
+		margin-bottom: 10px;
+	}
+	.emp-row h1{
+		margin-top: 10px;
+	}
+	#andMore{
+		display: block;
+		color: #004271;
+		font-style: italic;
+		margin-top: 50px;
+	}
 }
 
 /* end employers page css */
@@ -1768,8 +1792,7 @@ p.lead:hover {
 }
 
 
-@media only screen and (max-width: 479px){
-
+@media only screen and (max-width: 479px){ /* This swaps the placement of the video and text above it on Testimonials  page */
   .flipWrap {
 	  display: -webkit-box;
     display: -moz-box;
@@ -1781,7 +1804,6 @@ p.lead:hover {
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    /* optional */
     -webkit-box-align: start;
     -moz-box-align: start;
     -ms-flex-align: start;
